Sun Aug 03 12:10:42 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Update copyright date, and mention Paul Rudin.
	* docs/queries.rst: Make clear that approximate range terms can be
	  used to speed up exact range searches.

Sun Aug 03 11:57:37 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,xappy/searchconnection.py,
	  xappy/unittests/range_accel.py: Add "range acceleration" terms,
	  to allow approximate ranges to be stored in documents.  This
	  allows fast, but approximate, range searches to be performed, and
	  also allows such a search to be combined with an exact range
	  search to speed up the range search.
	* docs/queries.rst: Document the approximate range queries.

Sun Aug 03 11:26:32 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* test.py: Add some more useful facilities to the environment that
	  doctests are run in.

Sun Aug 03 11:25:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/weight_action.py: Make the comment on
	  test_regression() more explanatory.

Tue Jul 29 23:09:16 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: For INDEX_EXACT, TAG and FACET term
	  queries, multiply the weight by 0 to tell xapian that the weight
	  is always zero, and allow better optimisation.
	* xappy/doctests/indexerconnection_doctest2.txt: Update expected
	  query to correspond to this change.
	* xappy/doctests/searchconnection_doctest2.txt: Modify expected
	  percentage weight to align with recent rounding fixes in xapian's
	  percentage weight calculation routines.

Fri Jul 18 12:57:56 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: If a query is empty, don't require that it has a
	  search connection in get_max_possible_weight() - we know that the
	  maximum weight of an empty query is 0, and relaxing this
	  restriction makes it more convenient to write code.
