@@ -1,3 +1,7 @@
+Sun Aug 03 20:38:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/range_accel.py: Some formatting fixes.
+
 Sun Aug 03 12:10:42 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* AUTHORS: Update copyright date, and mention Paul Rudin.
